--- a/social_network/friends/templates/friend_profile/friend_profile.html
+++ b/social_network/friends/templates/friend_profile/friend_profile.html
@@ -16,13 +16,11 @@
 
             <div class = "frame profile">
                 <div class = "avatar">
-                    {% for avatar_image in avatar %}
-                        {% if avatar_image.image %}      
-                            <img class = "my-avatar" src="{{ avatar_image.image.url }}" alt="">
-                        {% else %}
-                            <img class = "my-avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                        {% endif %}
-                    {% endfor%}
+                    {% if avatar %}
+                        <img class = "my-avatar" src="{{ avatar.image.url }}" alt="">
+                    {% else %}
+                        <img class = "my-avatar" src="{% static 'images/icons/account.png' %}" alt="">
+                    {% endif %}
                 </div>
 
                 <div class = "nick-and-tag">
@@ -32,19 +30,19 @@
 
                 <div class = "subscribers" >
                     <div class = "all-posts section">
-                        <h2 class = "number">566</h2>
+                        <h2 class = "number">{{ posts_count }}</h2>
                         <h3 class = "info">Дописи</h3>  
                     </div>
                     <div class = "followers section">
-                        <h2 class = "number">12.1K</h2>
+                        <h2 class = "number">{{ all_views.count}}</h2>
                         <h3 class = "info">Читачі</h3>
                     </div>
                     <div class = "all-friends section">
-                        <h2 class = "number">222</h2>
+                        <h2 class = "number">{{ my_friends.count }}</h2>
                         <h3 class = "info">Друзі</h3>
                     </div>
-                </div>
-                {% if not current_request.is_friend %}
+                </div>                
+                {% if not current_request.accepted %}
                 <div class="confirm-delete-div">
                     <a class="add-button button" id = "{% url 'confirm_friend' friend.user.pk %}">Підтвердити</a>
                     <a class = "button button-delete" id = "{% url 'delete_request' friend.user.pk %}" href = "{% url 'main_friends'%}">
@@ -77,15 +75,11 @@
                                     <div class = "avatar-label">
                                         <div class = "people-logo-and-nick">
                                             <div class = "logo-post">
-                                                {% for avatar in all_avatars %}
-                                                    {% if avatar.image %}
-                                                        {% if avatar.profile == post.author%}
-                                                            <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">                                              
-                                                        {% endif  %}
-                                                    {% else %}
-                                                        <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                                                    {% endif%}
-                                                {% endfor %}
+                                                {% if avatar %}
+                                                    <img class = "post-friend-avatar-mini" src="{{ avatar.image.url }}" alt="">
+                                                {% else %}
+                                                    <img class = "post-friend-avatar-mini" src="{% static 'images/icons/account.png' %}" alt="">
+                                                {% endif %}
                                             </div>
                                             <div class = "nick-post">
                                                 <h2 class = "nick-friend">{{post.author}}</h2>
