--- a/social_network/friends/templates/friends/friends.html
+++ b/social_network/friends/templates/friends/friends.html
@@ -1,6 +1,6 @@
 {% extends "base_header_main.html" %}
 {% load static %}
-
+{% load custom_tags %}
 {% block title %}
     Друзі
 {% endblock %}
@@ -45,15 +45,13 @@
                             <div class = "card" id = "card-request-{{request.profile1.user.pk}}">
                                     <div class = "profile-card">
                                         <a href="{% url 'friend_profile' request.profile1.user.pk %}" class = "avatar">
-                                            {% for avatar in all_avatars %}
-                                                {% if avatar.image %}
-                                                    {% if avatar.profile == request.profile1 %}
-                                                        <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
-                                                    {% endif  %}
+                                            {% with author_avatar=author_avatars|get_item:request.profile1.user.id%}
+                                                {% if author_avatar and author_avatar.image %}
+                                                    <img class="post-friend-avatar" src="{{ author_avatar.image.url }}" alt="">
                                                 {% else %}
-                                                    <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                                                {% endif%}
-                                            {% endfor %}
+                                                    <img class="post-friend-avatar" src="{% static 'images/icons/account.png' %}" alt="">
+                                                {% endif %}
+                                            {% endwith %}
                                         </a>
                                     </div>
                                     <div class = "card-info">
@@ -83,15 +81,13 @@
                     {% for recommended in all_recommended %}
                         <div class = "card" id = "card-recommended-{{recommended.user.pk}}">
                             <div class = "profile-card">
-                                {% for avatar in all_avatars %}
-                                    {% if avatar.active %}
-                                        {% if avatar.profile == recommended %}
-                                            <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
-                                        {% endif  %}
+                                {% with author_avatar=author_avatars|get_item:recommended.user.id%}
+                                    {% if author_avatar and author_avatar.image %}
+                                        <img class="post-friend-avatar" src="{{ author_avatar.image.url }}" alt="">
                                     {% else %}
-                                        <img class = "avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                                    {% endif%}
-                                {% endfor %}
+                                        <img class="post-friend-avatar" src="{% static 'images/icons/account.png' %}" alt="">
+                                    {% endif %}
+                                {% endwith %}
                             </div>
                             <div class = "card-info">
                                 <h1 class = "name">{{recommended.user.first_name}} {{ recommended.user.last_name }}</h1>
@@ -121,15 +117,23 @@
                             <div class = "card" id = "card-friend-{{friend.user.pk}}">
                                 
                                 <div class = "profile-card">
-                                    {% for avatar in all_avatars %}
-                                        {% if avatar.image %}
-                                            {% if avatar.profile == friend.profile1 %}
-                                                <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
-                                            {% endif  %}
-                                        {% else %}
-                                            <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                                        {% endif%}
-                                    {% endfor %}
+                                    {% if friend.profile1 != current_user %}
+                                        {% with author_avatar=author_avatars|get_item:friend.profile1.user.id%}
+                                            {% if author_avatar and author_avatar.image %}
+                                                <img class="post-friend-avatar" src="{{ author_avatar.image.url }}" alt="">
+                                            {% else %}
+                                                <img class="post-friend-avatar" src="{% static 'images/icons/account.png' %}" alt="">
+                                            {% endif %}
+                                        {% endwith %}
+                                    {% elif friend.profile2 != current_user%}
+                                        {% with author_avatar=author_avatars|get_item:friend.profile2.user.id%}
+                                            {% if author_avatar and author_avatar.image %}
+                                                <img class="post-friend-avatar" src="{{ author_avatar.image.url }}" alt="">
+                                            {% else %}
+                                                <img class="post-friend-avatar" src="{% static 'images/icons/account.png' %}" alt="">
+                                            {% endif %}
+                                        {% endwith %}
+                                    {% endif%}
                                 </div>
                                 
                                     <div class = "card-info">
