--- a/social_network/friends/templates/recommended/recommended.html
+++ b/social_network/friends/templates/recommended/recommended.html
@@ -1,6 +1,6 @@
 {% extends "base_header_main.html" %}
 {% load static %}
-
+{% load custom_tags %}
 {% block title %}
     Друзі
 {% endblock %}
@@ -28,15 +28,13 @@
                     {% for recommended in all_recommended %}
                         <div class = "card" id = "card-recommended-{{recommended.user.pk}}">
                             <div class = "profile-card">
-                                {% for avatar in all_avatars %}
-                                    {% if avatar.active %}
-                                        {% if avatar.profile == recommended %}
-                                            <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
-                                        {% endif  %}
+                                {% with author_avatar=author_avatars|get_item:recommended.user.id%}
+                                    {% if author_avatar and author_avatar.image %}
+                                        <img class="post-friend-avatar" src="{{ author_avatar.image.url }}" alt="">
                                     {% else %}
-                                        <img class = "avatar" src="{% static 'images/icons/account.png'%}" alt="">
-                                    {% endif%}
-                                {% endfor %}
+                                        <img class="post-friend-avatar" src="{% static 'images/icons/account.png' %}" alt="">
+                                    {% endif %}
+                                {% endwith %}
                             </div>
                             <div class = "card-info">
                                 <h1 class = "name">{{recommended.user.first_name}} {{ recommended.user.last_name }}</h1>
