--- a/social_network/main/static/css/style.css
+++ b/social_network/main/static/css/style.css
@@ -1084,3 +1084,10 @@ div.frame.profile{
 .likes-icon-click:hover{
     cursor: pointer;
 }
+.add-tag{
+    width: calc(6.6vw + 9.3vh);
+    height: calc(1vw + 1.4vh);
+}
+.tag-container{
+    align-items: center;
+}
