--- a/social_network/friends/static/friends/css/friends.css
+++ b/social_network/friends/static/friends/css/friends.css
@@ -280,3 +280,31 @@ max-height: calc(29.3vw + 28.7vh);
     width: calc(1.6vw + 2.3vh);
     height: calc(1.6vw + 2.3vh);
 }
+.all-albums{
+    width: calc(12.2vw + 17.2vh);
+    height: fit-content;
+    padding: calc(0.5vw + 0.8vh);
+}
+.album{
+    display: flex;
+    flex-direction: column;
+    gap: calc(0.3vw + 0.5vh);
+    width: calc(11vw + 15.6vh);
+    height: calc(10.7vh + 7.6vw);
+}
+.container-album{
+    display: flex;
+    gap: calc(0.5vw + 0.8vh);
+}
+.text-album{
+    font-size: calc(0.7vh + 0.5vw);
+}
+
+.album-image{
+    width: calc(11vw + 15.6vh);
+    height: calc(5.6vw + 7.9vh);
+    border-radius: calc(0.3vw + 0.5vh);
+}
+.cards-album{
+    max-height: calc(18.7vw + 26.4vh) !important;
+}
